# nasmy

./: .gitignore  CMakeLists.txt  README.md  format.config.uncrustify.4_spaces  nasmy.kdev4
cmake/: add_translations_qt5.cmake
src/: CMakeLists.txt  about.cpp  about.h  about.ui  assembler.cpp  assembler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nasmy.cpp  nasmy.h  nasmy.qrc  qfileedit.cpp  qfileedit.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  singleton.h  test.cpp
src/debugger/: registerslist.cpp  registerslist.h  watchestree.cpp  watchestree.h
src/editor/: asmedit.cpp  asmedit.h  file.cpp  file.h  filecontroller.cpp  filecontroller.h  filescontroller.cpp  filescontroller.h
src/editor/completion/: completerpopupmodel.cpp  completerpopupmodel.h  popupview.cpp  popupview.h
src/editor/syntax/: highlighter.cpp  highlighter.h
src/project/: project.cpp  project.h  projectscontroller.cpp  projectscontroller.h  projectstree.cpp  projectstree.h  projectstreeitem.cpp  projectstreeitem.h  projectwindow.cpp  projectwindow.h  projectwindow.ui
src/resources/: dashboard.qml  style.qss
src/templates/@PROJECT_NAME@/: @PROJECT_NAME@.nasmy
src/translations/: nasmy_ru.qm  nasmy_ru.ts
